--- a/index.html
+++ b/index.html
@@ -7,17 +7,17 @@
         <section>
             <h1>Harel's Dreams for POST COVID-19</h1>
             <h3>My dreams are:</h3>
-            <ul>
+             <ul>
                 <li>My first dream is to travel with my family again, without any worries.</li>
                 <li>My <strong>dream</strong>  is to watch the <strong>greatest</strong> player of all time one more time.</li>
-            </ul>
-            <a href="http://127.0.0.1:5500/exercises/ex-1/index1.html">Family trip</a>
+             </ul>
         </section>
-        <img src="images/img2.png"/>
+        <section><a href="http://127.0.0.1:5500/exercises/ex-1/index1.html">Family trip</a></section>
+        <img src="images/img1.png" alt="Family trip" title="Family trip"/>
         <section>
-            <a href="http://127.0.0.1:5500/exercises/ex-1/index2.html">Messi in action</a>  
+        <a href="http://127.0.0.1:5500/exercises/ex-1/index2.html">Messi in action</a>  
         </section>
-        <img src="images/img1.png"/>
-        <p></p><b>Family always comes first!</b></body></p>
+        <img src="images/img2.png" alt="Messi in action" title="Messi in action"/>    <!--<https://en.as.com/en/imagenes/2020/02/09/football/1581260503_252075_noticia_normal.jpg>-->
+        <section><h4>Family always comes first!</h4></section>
     </body>
 </html>
