--- a/index2.html
+++ b/index2.html
@@ -8,15 +8,14 @@
             <h1>Messi in action</h1>
         </section>
         <section>
-            <img src="images/img1.png"/>
+            <img src="https://en.as.com/en/imagenes/2020/02/09/football/1581260503_252075_noticia_normal.jpg" alt="Messi in action" title="Messi in action"/>   <!--<https://en.as.com/en/imagenes/2020/02/09/football/1581260503_252075_noticia_normal.jpg>-->
         </section>
         <section>
             <p>The impact of COVID-19 on sport is massive.One of my favorite things in the world is sports and particuraly football. </p>
             <p>The best footballer alive is still playing, and I to see this marvel with my own eyes. </p>
         </section>
         <br><br><br>
-        <b><p><small>©Harel Fogel</small></b></p>
-        <br>
+        <b><p><h5>&copy;Harel Fogel</h5></b></p>
         <a href="http://127.0.0.1:5500/exercises/ex-1/index.html">Back to home page</a>
     </body>
 </html>
