--- a/index1.html
+++ b/index1.html
@@ -8,15 +8,14 @@
             <h1>Family trip</h1>
         </section>
         <section>
-            <img src="images/img2.png"/>
+            <img src="images/img1.png" alt="Family trip" title="Family trip"/>
         </section>
         <section>
             <p>During Corona virus period, I have learned that most important things in life is health and family.</p>
             <p>That's the reason I just want to be in a beautiful place with the people I care about.</p>
         </section>
         <br><br><br>
-        <b><p><small>©Harel Fogel</small></b></p>
-        <br>
+        <b><p><h5>&copy;Harel Fogel</h5></b></p>
         <a href="http://127.0.0.1:5500/exercises/ex-1/index.html">Back to home page</a>
     </body>
 </html>
