my first homework

--- a/dream_1.html
+++ b/dream_1.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Family trip</title>
+        <title>Harel Fogel</title>
     </head>
     <body>
         <section>
