--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>My dreams</title>
+        <title>Harel Fogel</title>
     </head>
     <body>
         <section>
